--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "react": "16.4.1",
-    "react-native": "https+git://git@github.com/SergeySmolin/react-native.git"
+    "react-native": "git+https://git@github.com/SergeySmolin/react-native.git"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
